# multi-hop-rag

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION.md  README.md  USAGE.md  docker-compose.yml  pyproject.toml  setup_uv.sh
datasets/: applied_easy.jsonl  applied_hard.jsonl  applied_medium.jsonl
examples/: basic_usage.py  cli.py  sample_cfr.txt
notebooks/: quick_start.ipynb
reports/: REPORT.md
reports/predictions/: applied_easy_predictions.jsonl  applied_hard_predictions.jsonl  applied_medium_predictions.jsonl
reports/predictions_versions/20260215-205423/: applied_medium_predictions.jsonl
scripts/: generate_applied_dataset.py  generate_applied_sets.py  run_eval_report.py
src/multi_hop_rag/: __init__.py  categorization.py  config.py  pipeline.py  prompts.py
src/multi_hop_rag/chunking/: __init__.py  hierarchical_chunker.py
src/multi_hop_rag/embedding/: __init__.py  huggingface_embedder.py
src/multi_hop_rag/evaluation/: __init__.py  evaluate.py  metrics.py
src/multi_hop_rag/graph/: __init__.py  rag_graph.py
src/multi_hop_rag/indexing/: __init__.py  chroma_store.py
src/multi_hop_rag/retrieval/: __init__.py  retriever.py
tests/: conftest.py  test_chunking.py  test_config.py  test_pipeline.py
